Enhance project setup: update .gitignore, add main functionality, and modify requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,30 @@
 cachetools==6.2.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
-google-api-core==2.25.2
-google-api-python-client==2.184.0
+click==8.3.0
+future==1.0.0
 google-auth==2.41.1
-google-auth-httplib2==0.2.0
-googleapis-common-protos==1.70.0
-httplib2==0.31.0
+google-auth-oauthlib==1.2.2
+gspread==6.2.1
 idna==3.10
-proto-plus==1.26.1
-protobuf==6.32.1
+markdown-it-py==4.0.0
+mdurl==0.1.2
+numpy==2.3.3
+oauthlib==3.3.1
+pandas==2.3.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pyparsing==3.2.5
+Pygments==2.19.2
+Pygrister==0.8.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.32.5
+requests-oauthlib==2.0.0
+rich==14.1.0
 rsa==4.9.1
-uritemplate==4.2.0
+shellingham==1.5.4
+six==1.17.0
+typer==0.19.2
+typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
